--- a/calculadora.html
+++ b/calculadora.html
@@ -110,5 +110,51 @@
 		</div>	
 	</div>
 
+	<script>
+
+		var suma = document.getElementById("suma");{
+			suma.addEventListener("click", function(){
+				var numero1 = parseFloat(document.getElementById("numero1").value);
+				var numero2 = parseFloat(document.getElementById("numero2").value);
+				var resultado = numero1 + numero2;
+				document.getElementById("resultado").innerText = resultado;
+			});
+		}
+
+
+		var resta = document.getElementById("resta");
+		{
+			resta.addEventListener("click", function(){
+				var numero1 = parseFloat(document.getElementById("numero1").value);
+				var numero2 = parseFloat(document.getElementById("numero2").value);
+				var resultado = numero1 - numero2;
+				document.getElementById("resultado").innerText = resultado;
+			});
+		}
+
+
+		var multiplica = document.getElementById("multiplica");
+
+
+		var divide = document.getElementById("divide");
+
+
+		var exponente = document.getElementById("exponente");
+
+
+
+		var multiplica = document.getElementById("multiplica");
+
+
+		var divide = document.getElementById("divide");
+
+
+		var exponente = document.getElementById("exponente");
+
+
+		var raiz = document.getElementById("raiz");
+
+	</script>
+
 </body>
 </html>
