--- a/calculadora.html
+++ b/calculadora.html
@@ -146,6 +146,14 @@
 
 
 		var divide = document.getElementById("divide");
+		{
+			divide.addEventListener("click", function(){
+				var numero1 = parseFloat(document.getElementById("numero1").value);
+				var numero2 = parseFloat(document.getElementById("numero2").value);
+				var resultado = numero1 / numero2;
+				document.getElementById("resultado").innerText = resultado;
+			});
+		}
 
 
 		var exponente = document.getElementById("exponente");
