--- a/calculadora.html
+++ b/calculadora.html
@@ -157,19 +157,24 @@
 
 
 		var exponente = document.getElementById("exponente");
-
-
-
-		var multiplica = document.getElementById("multiplica");
-
-
-		var divide = document.getElementById("divide");
-
-
-		var exponente = document.getElementById("exponente");
+		{
+			exponente.addEventListener("click", function(){
+				var numero1 = parseFloat(document.getElementById("numero1").value);
+				var numero2 = parseFloat(document.getElementById("numero2").value);
+				var resultado = Math.pow(numero1, numero2);
+				document.getElementById("resultado").innerText = resultado;
+			});
+		}
 
 
 		var raiz = document.getElementById("raiz");
+		{
+			raiz.addEventListener("click", function(){
+				var numero1 = parseFloat(document.getElementById("numero1").value);
+				var resultado = Math.sqrt(numero1);
+				document.getElementById("resultado").innerText = resultado;
+			});
+		}
 
 	</script>
 
